##  Copyright 2012-2023 Carnegie Mellon University
##  See license information in LICENSE.txt.

##  Process this file with automake to produce Makefile.in
##  ------------------------------------------------------------------------
##  Makefile.am (doc)
##  autotools build system for super_mediator
##  ------------------------------------------------------------------------
##  Authors: CERT Network Situational Awareness
##  ------------------------------------------------------------------------
##  @DISTRIBUTION_STATEMENT_BEGIN@
##  Super Mediator 2.0.0
##
##  Copyright 2023 Carnegie Mellon University.
##
##  NO WARRANTY. THIS CARNEGIE MELLON UNIVERSITY AND SOFTWARE ENGINEERING
##  INSTITUTE MATERIAL IS FURNISHED ON AN "AS-IS" BASIS. CARNEGIE MELLON
##  UNIVERSITY MAKES NO WARRANTIES OF ANY KIND, EITHER EXPRESSED OR IMPLIED,
##  AS TO ANY MATTER INCLUDING, BUT NOT LIMITED TO, WARRANTY OF FITNESS FOR
##  PURPOSE OR MERCHANTABILITY, EXCLUSIVITY, OR RESULTS OBTAINED FROM USE OF
##  THE MATERIAL. CARNEGIE MELLON UNIVERSITY DOES NOT MAKE ANY WARRANTY OF
##  ANY KIND WITH RESPECT TO FREEDOM FROM PATENT, TRADEMARK, OR COPYRIGHT
##  INFRINGEMENT.
##
##  Licensed under a GNU GPL 2.0-style license, please see LICENSE.txt or
##  contact permission@sei.cmu.edu for full terms.
##
##  [DISTRIBUTION STATEMENT A] This material has been approved for public
##  release and unlimited distribution.  Please see Copyright notice for
##  non-US Government use and distribution.
##
##  GOVERNMENT PURPOSE RIGHTS - Software and Software Documentation
##  Contract No.: FA8702-15-D-0002
##  Contractor Name: Carnegie Mellon University
##  Contractor Address: 4500 Fifth Avenue, Pittsburgh, PA 15213
##
##  The Government's rights to use, modify, reproduce, release, perform,
##  display, or disclose this software are restricted by paragraph (b)(2) of
##  the Rights in Noncommercial Computer Software and Noncommercial Computer
##  Software Documentation clause contained in the above identified
##  contract. No restrictions apply after the expiration date shown
##  above. Any reproduction of the software or portions thereof marked with
##  this legend must also reproduce the markings.
##
##  This Software includes and/or makes use of Third-Party Software each
##  subject to its own license.
##
##  DM23-2321
##  @DISTRIBUTION_STATEMENT_END@
##  ------------------------------------------------------------------------

docs: releases.xml docs-tstamp

releases.xml: $(top_srcdir)/NEWS
	$(AM_V_GEN)$(PERL) $(srcdir)/news2xhtml.pl < "$<" > "$@" || { rm -f "$@" ; exit 1 ; }

html/pandoc.css: pandoc.css
	$(AM_V_GEN)test -d html || mkdir html && cp "$<" "$@"

clean-local:
	rm -f releases.xml pod2htm*.tmp docs-tstamp
	-test -n "$(ALL_HTML_FILES)" && rm -f $(ALL_HTML_FILES)
	-test -d html && rmdir html

ALL_HTML_FILES = html/pandoc.css $(MD_HTMLFILES) $(POD_HTMLFILES)


# Markdown source files for tutorials and other pages
MD_SOURCEFILES = \
  docs.md \
  install.md \
  new_sm2.md \
  quick_setup.md \
  sm_dedup.md \
  sm_guide.md \
  sm_ssl_dedup.md \
  usecases.md

# HTML files generated by calling pandoc on MD_SOURCEFILES
MD_HTMLFILES = \
  html/docs.html \
  html/install.html \
  html/new_sm2.html \
  html/quick_setup.html \
  html/sm_dedup.html \
  html/sm_guide.html \
  html/sm_ssl_dedup.html \
  html/usecases.html


# Perl POD source files for manual pages (unused variable)
POD_MANPAGES = \
  $(top_srcdir)/src/super_mediator.pod \
  $(top_srcdir)/src/super_mediator.conf.pod \
  $(top_srcdir)/src/super_table_creator.pod

# HTML files generated by calling pod2html on POD_MANPAGES
POD_HTMLFILES = \
  html/super_mediator.html \
  html/super_mediator.conf.html \
  html/super_table_creator.html


# Apply document markings to the files in the html directory
UPDATE_DOC_MARKINGS = \
  if test -f "$(UPDATE_MARKINGS)" ; then \
    find html \
      -type f -print0 \
    | xargs -0 $(PERL) $(UPDATE_MARKINGS) ; \
  fi

if HAVE_UPDATE_MARKINGS
docs-tstamp: $(ALL_HTML_FILES)
	$(UPDATE_DOC_MARKINGS)
	$(AM_V_GEN)touch $@
else
docs-tstamp: $(ALL_HTML_FILES)
	$(AM_V_GEN)touch $@
endif


# Arguments to pass to pandoc
PANDOC_ARGS = \
  --standalone \
  --from markdown-smart \
  --to html \
  --columns 1000 \
  --css '/site/style.css' \
  --css 'pandoc.css' \
  --table-of-contents

# Command to convert a Markdown file to HTML via PANDOC
#
# Strip comments from markdown to avoid pandoc warning
# Remove <header> and <nav> entities from pandoc output
MD_TO_HTML = \
  { test -d html || mkdir html ; \
    sed -e 's|^\[//\]:.*||' $< | \
    $(PANDOC) $(PANDOC_ARGS) -o "$@" ; } || \
  { rm -f "$@" ; exit 1 ; } && \
  { sed -e '\:^<header:d' -e '\:^</header:d' \
        -e '\:^<nav:d' -e '\:^</nav:d' \
        -i '' "$@" ; } || \
  { rm -f "$@" ; exit 1 ; }


# Arguments to pass to pod2html
POD2HTML_ARGS = --no-index

# Command to convert a POD file to HTML via pod2html
POD_TO_HTML = \
  { test -d html || mkdir html ; \
    title=`echo "$@" | sed -e 's,^html/,,' -e 's,\.html$$,,'` ; \
    $(POD2HTML) $(POD2HTML_ARGS) --title="$$title" \
        --infile="$<" --outfile="$@" ; } || \
  { rm -f "$@" ; exit 1 ; } && \
  { $(PERL) $(srcdir)/add-header.pl "$@" ; } || \
  { rm -f "$@" ; exit 1 ; }


# An individual rule to build each HTML file

html/docs.html: docs.md
	$(AM_V_GEN)$(MD_TO_HTML)

html/install.html: install.md
	$(AM_V_GEN)$(MD_TO_HTML)

html/new_sm2.html: new_sm2.md
	$(AM_V_GEN)$(MD_TO_HTML)

html/quick_setup.html: quick_setup.md
	$(AM_V_GEN)$(MD_TO_HTML)

html/sm_dedup.html: sm_dedup.md
	$(AM_V_GEN)$(MD_TO_HTML)

html/sm_guide.html: sm_guide.md
	$(AM_V_GEN)$(MD_TO_HTML)

html/sm_ssl_dedup.html: sm_ssl_dedup.md
	$(AM_V_GEN)$(MD_TO_HTML)

html/usecases.html: usecases.md
	$(AM_V_GEN)$(MD_TO_HTML)

html/super_mediator.html: $(top_srcdir)/src/super_mediator.pod
	$(AM_V_GEN)$(POD_TO_HTML)

html/super_mediator.conf.html: $(top_srcdir)/src/super_mediator.conf.pod
	$(AM_V_GEN)$(POD_TO_HTML)

html/super_table_creator.html: $(top_srcdir)/src/super_table_creator.pod
	$(AM_V_GEN)$(POD_TO_HTML)


# POD sources are in the EXTRA_DIST of $(top_srcdir)/src/
EXTRA_DIST = add-header.pl news2xhtml.pl pandoc.css $(MD_SOURCEFILES)
